# flashlight

./: CMakeLists.txt  astyle_all.pl  astylerc
flashlight/: CMakeLists.txt  config.json  flarray.c  flarray.h  flashlight.c  flashlight.h  flexec.h  flstring.c  flstring.h  fltypes.h  flwalk.c  flwalk.h  image.c  image.h  jpath.c  jpath.h  main.c
flashlight/posix/: walk.c
flashlight/win/: exec.c  walk.c
flconsole/: CMakeLists.txt  main.c  win.json
flwindow/: CMakeLists.txt  config.json  image.c  image.h  main.c  theme.c  theme.h  util.c  util.h
flwindow/root/: config.json
flwindow/root/themes/hurr/: theme.json
flwindow/root/themes/vim/: theme.json
flwindow/themes/hurr/: theme.json
